# PhenoVCS

./: .clippy.toml  .env.example  .gitignore  ADR.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  SSOT.md  SUPPORT.md  Taskfile.yml  audit_scorecard.json  codecov.yml  deny.toml  justfile  rustfmt.toml  worklog.md
.github/: dependabot.yml  scorecard.yml
.github/workflows/: audit.yml  cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  deny.yml  governance.yml  journey-gate.yml  legacy-tooling-gate.yml  observability-smoke.yml  release.yml  scorecard.yml  traceability.yml  trufflehog.yml
.phenotype/: ai-traceability.yaml
crates/airlock-v2/: Cargo.toml  README.md
crates/airlock-v2/examples/: daemon.rs
crates/airlock-v2/src/: autocommit.rs  cleanup.rs  git_ops.rs  main.rs  registry.rs
crates/clap-ext/: Cargo.toml
crates/pheno-tracing/: Cargo.toml  VERSION.toml
crates/pheno-tracing/src/: adapters.rs  compat.rs  port.rs  sampling.rs
crates/pheno-tracing/tests/: error_coverage.rs  port_integration.rs  stdout_adapter_coverage.rs
crates/pheno-vcs-core/: Cargo.toml  pheno-vcs-core.cdx.json
crates/pheno-vcs-core/src/: lib.rs  snapshot.rs
crates/phenovcs-observability/: Cargo.toml
crates/phenovcs-observability/src/: lib.rs
crates/worktree-manager/: Cargo.toml  worktree-manager.cdx.json
crates/worktree-manager/src/: main.rs
crates/worktree-manager/tests/: integration_worktree_lifecycle.rs
docs/: FUNCTIONAL_REQUIREMENTS.md  index.md  observability.md  sota-rust-git-2026.md
docs/adr/: ADR-001-pure-rust-gitoxide.md  ADR-002-async-first-api.md  ADR-003-modular-workspace.md  ADR.md
docs/boundary/: DISPOSITION.md  PhenoVCS.md
docs/intent/: PhenoVCS.md
docs/journeys/manifests/: README.md  main-flow.json
docs/operations/: journey-traceability.md
docs/operations/iconography/: SPEC.md
docs/research/: SOTA.md
docs/worklogs/: README.md
ports/: Cargo.toml
ports/src/: lib.rs  vcs.rs
ports/src/adapters/: git.rs  jj.rs  mod.rs
ports/tests/: vcs.rs
tests/: README.md  fr_coverage_test.go
tooling/legacy-enforcement/policy/: rules.yaml
tooling/legacy-enforcement/scanner/: legacy_tooling_scanner.py
(+15 files in other folders)
