[workspace]
members = [
    "crates/pheno-vcs-core",
    "crates/worktree-manager",
    "crates/airlock-v2",
    "crates/phenovcs-observability",
    "crates/pheno-tracing",
    "crates/clap-ext",
    "ports",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoVCS"
rust-version = "1.75"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
clap-ext = { path = "crates/clap-ext" }
pheno-tracing = { path = "crates/pheno-tracing" }
