[package]
name = "airlock-v2"
description = "Conservative auto-save / push daemon for git repositories (vendored from .airlock/bin/airlock-v2.py)"
authors = ["Phenotype"]
keywords = ["git", "airlock", "auto-commit", "backup", "daemon"]
categories = ["development-tools", "version-control"]

# Inherited from workspace
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "airlock_v2"
path = "src/lib.rs"

[[bin]]
name = "airlock-v2"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
