[package]
name = "clap-ext"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Rust CLI extension library: Verbosity, tracing setup, common clap args (vendored; upstream KooshaPari/clap-ext retired)"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help", "env"] }
anyhow = "1.0"
thiserror = "2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
