[package]
name = "phenovcs-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PhenoVCS observability substrate — thin re-export of pheno-tracing (ADR-012, ADR-036)"

[dependencies]
pheno-tracing.workspace = true
tracing = "0.1"
